support custimized web page tab title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=0.6, maximum-scale=1, minimum-scale=0.6, user-scalable=0">
 	<meta name="description" content="Wear your earphone">
-	<title>Happy Valentine's Day</title>
+	<title></title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" />
