add default auto scroll bar for letter content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 							<div class="flip">
 								<div class="front"></div>
 								<div class="back">
-									<p class="letter"></p>
+									<div id="context">
+										<p class="letter"></p>
+									</div>
 									<a id="close" href="#">Close</a>
 								</div>
 							</div>
