--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<form class="flip">
 				<div class="front">
 					<h2 id="recipient">To&nbsp;&nbsp;</h2>
-					<a id="flip2back" href="#">Flip</a>
+					<a id="flip2back" href="#">🔗</a>
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
@@ -41,18 +41,18 @@
 									<div id="context">
 										<p class="letter"></p>
 									</div>
-									<a id="close" href="#">Close</a>
+									<a id="close" href="#">🌸</a>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div id="top">
-						<a id="flip" href="#contact">Flip</a>
+						<a id="flip" href="#contact">🔗</a>
 					</div>
 					<div id="lid" class="container">
 						<div class="flip">
 							<div class="front">
-								<a id="open" href="#content"><span></span></a>
+								<a id="open" href="#content"><span id="btn"></span></a>
 							</div>
 							<div class="back"></div>
 						</div>
