fix half stitch bug

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 						</div>
 					</div>
 					<div id="top">
+						<span id="half"></span>
 						<a id="flip" href="#contact">🔗</a>
 					</div>
 					<div id="lid" class="container">
