support customized stamp & rename pngs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<section class="container" id="contact">
 			<form class="flip">
 				<div class="front">
+					<span id="stamp"></span>
 					<h2 id="recipient">To&nbsp;&nbsp;</h2>
 					<a id="flip2back" href="#">🔗</a>
 				</div>
