upd play btn png

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="viewport"
-		content="width=device-width, initial-scale=0.6, maximum-scale=1, minimum-scale=0.6, user-scalable=0">
 	<meta name="description" content="Wear your earphone">
-	<title></title>
+	<title>eLuvLetter</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" />
@@ -30,8 +28,10 @@
 			<form class="flip">
 				<div class="front">
 					<span id="stamp"></span>
-					<h2 id="recipient">To&nbsp;&nbsp;</h2>
-					<a id="flip2back" href="#">🔗</a>
+					<a href="#">
+						<h2 id="recipient">To&nbsp;&nbsp;</h2>
+					</a>
+					<!-- <a id="flip2back" href="#">🌸</a> -->
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
@@ -42,14 +42,14 @@
 									<div id="context">
 										<p class="letter"></p>
 									</div>
-									<a id="close" href="#">🌸</a>
+									<a id="close" href="#"></a>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div id="top">
 						<span id="half"></span>
-						<a id="flip" href="#contact">🔗</a>
+						<a id="flip" href="#contact">♥</a>
 					</div>
 					<div id="lid" class="container">
 						<div class="flip">
