add packup href 4 half png

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 					<a href="#">
 						<h2 id="recipient">To&nbsp;&nbsp;</h2>
 					</a>
-					<!-- <a id="flip2back" href="#">🌸</a> -->
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
@@ -48,7 +47,7 @@
 						</div>
 					</div>
 					<div id="top">
-						<span id="half"></span>
+						<a id="half" href="#"></a>
 						<a id="flip" href="#contact">♥</a>
 					</div>
 					<div id="lid" class="container">
