upl a new bgm & combine h2 with a

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 			<form class="flip">
 				<div class="front">
 					<span id="stamp"></span>
-					<a href="#">
-						<h2 id="recipient">To&nbsp;&nbsp;</h2>
-					</a>
+					<a id="recipient" href="#">To&nbsp;&nbsp;</a>
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
