refine scroll bar style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<div class="flip">
 								<div class="front"></div>
 								<div class="back">
-									<div id="context">
+									<div id="data">
 										<p class="letter"></p>
 									</div>
 									<a id="close" href="#"></a>
