add class play and mute

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 		<div id="footer">
 			<audio id="music" preload="auto" loop></audio>
-			<a id="music_btn" href="javascript:playPause();"></a>
+			<a id="music_btn" class="play" href="javascript:playPause();"></a>
 		</div>
 	</div>
 
