--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="description" content="Wear your earphone">
+	<meta name="description" content="Put on headphones">
 	<title>eLuvLetter</title>
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/heart.css" />
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/letter.css" />
+	<link rel="stylesheet" href="css/sakura.css" />
+	<link rel="stylesheet" href="css/typed.css" />
+	<link rel="stylesheet" href="css/bgm.css" />
 
 	<script src="js/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/sakura.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/modernizr.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/sakura.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/typed.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/bgm.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -45,13 +49,13 @@
 						</div>
 					</div>
 					<div id="top">
-						<a id="half" href="#"></a>
+						<a id="wax-half" href="#"></a>
 						<a id="flip" href="#contact">♥</a>
 					</div>
 					<div id="lid" class="container">
 						<div class="flip">
 							<div class="front">
-								<a id="open" href="#content"><span id="btn"></span></a>
+								<a id="open" href="#content"><span id="wax"></span></a>
 							</div>
 							<div class="back"></div>
 						</div>
@@ -68,5 +72,6 @@
 
 </body>
 <script src="js/letter.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
