--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<link rel="stylesheet" href="css/typed.css" />
 	<link rel="stylesheet" href="css/bgm.css" />
 
-	<script src="js/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/modernizr.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"
+		charset="utf-8"></script>
 	<script src="js/sakura.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/typed.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/bgm.js" type="text/javascript" charset="utf-8"></script>
