upd scroll bar width & mv To from html 2 json

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<form class="flip">
 				<div class="front">
 					<span id="stamp"></span>
-					<a id="recipient" href="#">To&nbsp;&nbsp;</a>
+					<a id="recipient" href="#"></a>
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
