upd recipient & flip style

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<section class="container" id="contact">
 			<form class="flip">
 				<div class="front">
-					<span id="stamp"></span>
-					<a id="recipient" href="#"></a>
+					<a id="stamp" href="#"></a>
+					<span id="recipient"></span>
 				</div>
 				<div id="content" class="back">
 					<div id="letter">
