decouple stamp img and stamp base background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-
 	<div id="jsi-cherry-container">
 		<div class="heart"></div>
 	</div>
@@ -31,7 +30,7 @@
 		<section class="container" id="contact">
 			<form class="flip">
 				<div class="front">
-					<a id="stamp" href="#"></a>
+					<a id="stamp" href="#"><img></a>
 					<span id="recipient"></span>
 				</div>
 				<div id="content" class="back">
@@ -69,7 +68,6 @@
 			<a id="music_btn" class="play" href="javascript:playPause();"></a>
 		</div>
 	</div>
-
 </body>
 <script src="js/letter.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
